# Circlee

./: .gitignore  README.md
backend/: Cargo.toml
backend/crates/common/: Cargo.toml
backend/crates/common/src/: auth.rs  config.rs  lib.rs  realtime.rs
backend/migrations/: 0001_initial.sql
backend/services/api/: Cargo.toml
backend/services/api/src/: main.rs
backend/services/realtime/: Cargo.toml
backend/services/realtime/src/: main.rs
contracts/: realtime-events.md
docs/: architecture.md  design-system.md
infra/: docker-compose.yml
infra/nginx/: nginx.conf
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/src/: app.dart
mobile/lib/src/core/cache/: offline_operation.dart
mobile/lib/src/core/network/: api_client.dart
mobile/lib/src/core/realtime/: realtime_client.dart
mobile/lib/src/navigation/: app_router.dart  shell_scaffold.dart
mobile/lib/src/theme/: app_theme.dart  design_tokens.dart
mobile/linux/: CMakeLists.txt
mobile/linux/runner/: my_application.cc
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mobile/macos/Runner/Configs/: AppInfo.xcconfig
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
mobile/windows/runner/: Runner.rc  main.cpp
web/: package-lock.json
web/app/: page.tsx
(+22 files in other folders)
