[package]
name = "circlee-realtime"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
circlee-common = { path = "../../crates/common" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

